[gd_scene load_steps=2 format=3 uid="uid://djulcvjafyb7l"]

[ext_resource type="Script" path="res://Screens/pause_menu.gd" id="1_we4sm"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_we4sm")

[node name="TextureRect" type="ColorRect" parent="."]
offset_right = 576.0
offset_bottom = 324.0
color = Color(0.352941, 0.32549, 0.32549, 1)

[node name="PauseButton" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
text = "||"

[node name="Label" type="Label" parent="."]
offset_left = 68.0
offset_top = 20.0
offset_right = 504.0
offset_bottom = 43.0
text = "Pause Menu"
horizontal_alignment = 1

[node name="Music Label" type="Label" parent="."]
custom_minimum_size = Vector2(128, 64)
offset_left = 8.0
offset_top = 68.0
offset_right = 136.0
offset_bottom = 132.0
text = "Music: 100%"
vertical_alignment = 1

[node name="Music Slider" type="HSlider" parent="."]
offset_left = 132.0
offset_top = 68.0
offset_right = 512.0
offset_bottom = 132.0
max_value = 200.0
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="SFX Label" type="Label" parent="."]
custom_minimum_size = Vector2(128, 64)
offset_left = 8.0
offset_top = 136.0
offset_right = 136.0
offset_bottom = 200.0
text = "SFX: 100%"
vertical_alignment = 1

[node name="SFX Slider" type="HSlider" parent="."]
offset_left = 132.0
offset_top = 136.0
offset_right = 512.0
offset_bottom = 200.0
max_value = 200.0
value = 100.0
tick_count = 5
ticks_on_borders = true

[node name="CodeTextbox" type="LineEdit" parent="."]
offset_left = 384.0
offset_top = 280.0
offset_right = 568.0
offset_bottom = 311.0
placeholder_text = "Enter Code Here..."
max_length = 20
clear_button_enabled = true
caret_blink = true
caret_mid_grapheme = true

[node name="CodeConsole" type="Label" parent="."]
offset_left = 64.0
offset_top = 280.0
offset_right = 368.0
offset_bottom = 311.0
horizontal_alignment = 2

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="value_changed" from="Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SFX Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="text_changed" from="CodeTextbox" to="." method="_on_code_textbox_text_changed"]
[connection signal="text_submitted" from="CodeTextbox" to="." method="_on_line_edit_text_submitted"]
